solving overflow issue on mobile

--- a/src/assets/Components/Form/form.css
+++ b/src/assets/Components/Form/form.css
@@ -1,4 +1,5 @@
 form {
+  overflow-y: scroll;
   margin: 20px;
   display: flex;
   flex-direction: column;
@@ -6,6 +7,7 @@ form {
   align-items: center;
 }
 .formWrapper {
+  overflow-y: scroll;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
