--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,7 @@ body {
   color: #7e1639;
   text-align: center;
   font-size: 15px;
+  overflow-y: scroll;
 }
 h1 {
   font-size: 20px;
